[gd_scene load_steps=9 format=2]

[ext_resource path="res://Nodes/effect_node.tscn" type="PackedScene" id=1]
[ext_resource path="res://Nodes/ChromaticAbberation.gd" type="Script" id=2]

[sub_resource type="Shader" id=1]

resource_local_to_scene = true
code = "shader_type canvas_item;
render_mode blend_add;
uniform float offset = 0.01;
void fragment()
{
	vec4 col1 = texture(TEXTURE, UV+vec2(offset/1000.0,0));
	//vec4 col2 = texture(TEXTURE, UV);
	//vec4 col3 = texture(TEXTURE, UV-vec2(offset/1000.0,0));
	float a = col1.a;
	//float a = texture(TEXTURE, UV+vec2(offset/1000.0,0)).a *texture(TEXTURE, UV).a *  texture(TEXTURE, UV-vec2(offset/1000.0,0)).a;
	COLOR = vec4(col1.r,0.0, 0.0,a*col1.r);
}"
_sections_unfolded = [ "Resource" ]

[sub_resource type="ShaderMaterial" id=2]

resource_local_to_scene = true
render_priority = 0
shader = SubResource( 1 )
shader_param/offset = 0.0
_sections_unfolded = [ "Resource", "Shader Param", "shader", "shader_param" ]

[sub_resource type="Shader" id=3]

code = "shader_type canvas_item;
render_mode blend_add;
uniform float offset = 0.01;
void fragment()
{
	vec4 col1 = texture(TEXTURE, UV);
	//vec4 col2 = texture(TEXTURE, UV);
	//vec4 col3 = texture(TEXTURE, UV-vec2(offset/1000.0,0));
	float a = col1.a;
	//float a = texture(TEXTURE, UV+vec2(offset/1000.0,0)).a *texture(TEXTURE, UV).a *  texture(TEXTURE, UV-vec2(offset/1000.0,0)).a;
	COLOR = vec4(0.0,col1.g, 0.0,a*col1.g);
}"

[sub_resource type="ShaderMaterial" id=4]

resource_local_to_scene = true
render_priority = 0
shader = SubResource( 3 )
shader_param/offset = null
_sections_unfolded = [ "Resource", "shader", "shader_param" ]

[sub_resource type="Shader" id=5]

code = "shader_type canvas_item;
render_mode blend_add;
uniform float offset = 0.01;
void fragment()
{
	vec4 col1 = texture(TEXTURE, UV-vec2(offset/1000.0,0));
	//vec4 col2 = texture(TEXTURE, UV);
	//vec4 col3 = texture(TEXTURE, UV-vec2(offset/1000.0,0));
	float a = col1.a;
	//float a = texture(TEXTURE, UV+vec2(offset/1000.0,0)).a *texture(TEXTURE, UV).a *  texture(TEXTURE, UV-vec2(offset/1000.0,0)).a;
	COLOR = vec4(0.0, 0.0, col1.b,a*col1.b);
}"

[sub_resource type="ShaderMaterial" id=6]

resource_local_to_scene = true
render_priority = 0
shader = SubResource( 5 )
shader_param/offset = null
_sections_unfolded = [ "Resource", "shader" ]

[node name="Chromatic Abberation" index="0" instance=ExtResource( 1 )]
title = "Chromatic Abberation"
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color( 0, 0.6, 1, 1 )
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color( 0, 1, 0.227451, 1 )
script = ExtResource( 2 )

[node name="TextureRect" parent="Viewport" index="0"]
material = SubResource( 2 )

[node name="TextureRect2" type="TextureRect" parent="Viewport" index="1"]
material = SubResource( 4 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 256.0
margin_bottom = 256.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
stretch_mode = 0
_sections_unfolded = [ "Material", "Rect" ]

[node name="TextureRect3" type="TextureRect" parent="Viewport" index="2"]
material = SubResource( 6 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 256.0
margin_bottom = 256.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
stretch_mode = 0
_sections_unfolded = [ "Material", "Rect" ]

[node name="HBoxContainer" type="HBoxContainer" parent="." index="1"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 16.0
margin_top = 24.0
margin_right = 168.0
margin_bottom = 48.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="Label" type="Label" parent="HBoxContainer" index="0"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 5.0
margin_right = 53.0
margin_bottom = 19.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Strength"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Container" type="Container" parent="HBoxContainer" index="1"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 57.0
margin_right = 65.0
margin_bottom = 24.0
rect_min_size = Vector2( 8, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]

[node name="Strength" type="SpinBox" parent="HBoxContainer" index="2"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 69.0
margin_right = 143.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 0.0
exp_edit = false
rounded = false
allow_greater = false
allow_lesser = false
editable = true
prefix = ""
suffix = "%"

[connection signal="value_changed" from="HBoxContainer/Strength" to="." method="_on_SpinBox_value_changed"]
